--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "raml-definition-system",
-  "version": "0.0.2",
+  "version": "0.0.5",
   "private": false,
-  "main": "dist/UI.js",
+  "main": "dist/src/index.js",
   "scripts": {
     "test-cov": " ./node_modules/.bin/istanbul cover _mocha tests/*Tests.js",
     "build": "rm -rf dist/ && ./node_modules/typescript/bin/tsc ",
     "build-browser": "./node_modules/.bin/webpack --entry ./src/browser.js  --output-path ./browser --output-filename bundle.js --verbose --profile --display-modules "
   },
   "dependencies": {
+    "ts-structure-parser": "0.0.2",
     "underscore": "^1.8.3"
   },
-  "typings": "./dist/UI.d.ts",
+  "typings": "dist/src/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/mulesoft-labs/typesystem-ts.git"
@@ -21,11 +22,6 @@
     "definititions",
     "typesystem"
   ],
-  "author": {
-    "name": "Pavel Petrochenko",
-    "email": "petrochenko.pavel.a@gmail.com",
-    "url": "ru.linkedin.com/in/petrochenkopavel"
-  },
   "files": [
     "dist/",
     "typings.json"
