--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   "devDependencies": {
     "typescript": "1.8.7",
     "typings": "^0.5.1",
-    "webpack": "^1.3.7"
+    "webpack": "^1.3.7",
+    "json-loader":"^0.5.1"
   }
 }
 
