--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "raml-definition-system",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "private": false,
   "main": "dist/definitionSystem.js",
   "scripts": {
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "know-your-http-well": "^0.2.0",
-    "raml-typesystem": "0.0.16",
-    "ts-structure-parser": "0.0.2",
+    "raml-typesystem": "^0.0.16",
+    "ts-structure-parser": "^0.0.2",
     "underscore": "^1.8.3"
   },
   "typings": "dist/definitionSystem.d.ts",
