--- a/package.json
+++ b/package.json
@@ -26,12 +26,8 @@
     "definititions",
     "typesystem"
   ],
-  "files": [
-    "dist/",
-    "typings.json"
-  ],
   "homepage": "https://github.com/mulesoft-labs/typesystem-ts",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/mulesoft-labs/typesystem-ts/issues"
   },
