--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "name": "raml-definition-system",
   "version": "0.0.13",
-  "private": false,
   "main": "dist/definitionSystem.js",
   "scripts": {
-    "test-cov": " ./node_modules/.bin/istanbul cover _mocha tests/*Tests.js",
-    "compile": "rm -rf dist/ && ./node_modules/typescript/bin/tsc ",
+    "compile": "rm -rf dist/ && ./node_modules/typescript/bin/tsc",
     "generateJSON": "node dist/builder.js",
-    "build": "npm run compile && npm run generateJSON",
-    "build-browser": "./node_modules/.bin/webpack --entry ./src/browser.js  --output-path ./browser --output-filename bundle.js --verbose --profile --display-modules "
+    "build": "npm run compile && npm run generateJSON"
   },
   "dependencies": {
     "know-your-http-well": "^0.2.0",
@@ -19,25 +16,21 @@
   "typings": "dist/definitionSystem.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mulesoft/raml-definition-system.git"
+    "url": "https://github.com/raml-org/raml-definition-system.git"
   },
   "keywords": [
     "raml",
     "definition",
-    "typesystem"
+    "typesystem",
+    "specification"
   ],
-  "homepage": "https://github.com/mulesoft/raml-definition-system",
+  "homepage": "https://github.com/raml-org/raml-definition-system",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/mulesoft-labs/raml-definition-system/issues"
+    "url": "https://github.com/raml-org/raml-definition-system/issues"
   },
   "devDependencies": {
-    "typescript": "1.8.7",
-    "typings": "^0.5.1",
-    "webpack": "^1.3.7",
-    "json-loader":"^0.5.1"
+    "typescript": "^1.8.9",
+    "typings": "^0.7.9"
   }
 }
-
-
-
