--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "compile": "rimraf dist && tsc",
     "generateJSON": "node dist/builder.js",
-    "build": "npm run compile && npm run generateJSON",
+    "generateUniverses": "node dist/enumGen.js",
+    "build": "npm run compile && npm run generateJSON && npm run generateUniverses && tsc",
     "pullall" : "dev-env-installer pullall",
     "buildall" : "dev-env-installer buildall",
     "testall" : "dev-env-installer testall",
