--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "src/definitionSystem.ts",
     "src/annotationHandlers.ts",
     "src/tsStruct2Def.ts",
-    "src/universe.ts"
+    "src/universe.ts",
+    "src/enumGen.ts"
   ],
   "exclude": [
     "node_modules",
