--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "typescript": "^1.8.9",
     "typings": "^0.7.9",
-    "dev-env-installer": "^0.0.2"
+    "dev-env-installer": "^0.0.2",
+    "rimraf": "*"
   }
 }
