Updating the build to support travis pull requests.

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "devDependencies": {
     "typescript": "^1.8.9",
     "typings": "^0.7.9",
-    "dev-env-installer":"^0.0.2",
+    "dev-env-installer":"0.0.5",
     "json-loader": "^0.5.1",
     "rimraf":"*"
   }
