--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@types/node": "4.2.20",
     "@types/underscore": "1.8.3",
     "typescript": "2.5.2",
-    "dev-env-installer":"0.0.5",
+    "dev-env-installer": "^0.0.14",
     "json-loader": "^0.5.7",
     "rimraf":"*"
   }
